[tool.poetry]
name = "youtube-video-dowloader"
version = "0.1.0"
description = ""
authors = ["Vladimir Panferov <v3nseagal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytube = "^15.0.0"
click = "^8.1.3"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
